Potential Mockito/Azul issue fix for `AddWanBatchPublisherConfigMessageTaskTest` [HZ-4565] (#1128)
[Several tests are
failing](https://hazelcast.atlassian.net/browse/HZ-2245) only on Azul
Prime JDKs due to an incompatibility between it and Mockito.

In https://github.com/hazelcast/hazelcast-mono/pull/845 it was
discovered that a causal factor was mocking classes, not interfaces.

To address this:
- `AbstractMessageTask` refactored to not exclusively require a `Node`
(the problematic mocked class)
    - instead the elements required from `Node` can be supplied instead
- `AddWanBatchPublisherConfigMessageTaskTest` and related classes
refactored to use these new constructors
- Further replaced implementations with interfaces _where possible_

*Unable* to reproduce this issue locally to test if this will resolve
the issue.

Fixes: [HZ-4565](https://hazelcast.atlassian.net/browse/HZ-4565),
https://github.com/hazelcast/hazelcast/issues/26279

[HZ-4565]:
https://hazelcast.atlassian.net/browse/HZ-4565?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

GitOrigin-RevId: b3d0ee2866e9438f9fe077d10a8baab1e7ce4a9c