@@ -26,27 +26,29 @@ import com.hazelcast.client.impl.client.SecureRequest;
 import com.hazelcast.client.impl.protocol.ClientExceptionFactory;
 import com.hazelcast.client.impl.protocol.ClientMessage;
 import com.hazelcast.cluster.Address;
+import com.hazelcast.config.Config;
 import com.hazelcast.core.HazelcastInstanceNotActiveException;
 import com.hazelcast.core.MemberLeftException;
 import com.hazelcast.instance.BuildInfo;
 import com.hazelcast.instance.impl.Node;
+import com.hazelcast.instance.impl.NodeExtension;
+import com.hazelcast.internal.cluster.impl.ClusterServiceImpl;
 import com.hazelcast.internal.nio.Connection;
 import com.hazelcast.internal.nio.ConnectionType;
 import com.hazelcast.internal.serialization.InternalSerializationService;
 import com.hazelcast.internal.server.ServerConnection;
-import com.hazelcast.internal.tpcengine.net.AsyncSocket;
 import com.hazelcast.internal.tpcengine.iobuffer.IOBufferAllocator;
+import com.hazelcast.internal.tpcengine.net.AsyncSocket;
 import com.hazelcast.logging.ILogger;
 import com.hazelcast.security.Credentials;
 import com.hazelcast.security.SecurityContext;
 import com.hazelcast.spi.exception.RetryableHazelcastException;
-import com.hazelcast.spi.impl.NodeEngineImpl;
+import com.hazelcast.spi.impl.NodeEngine;
 import com.hazelcast.spi.impl.operationservice.impl.responses.NormalResponse;
 
 import java.lang.reflect.Field;
 import java.security.AccessControlException;
 import java.security.Permission;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
@@ -61,7 +63,7 @@ import static com.hazelcast.internal.util.ExceptionUtil.peel;
 public abstract class AbstractMessageTask<P> implements MessageTask, SecureRequest {
 
     private static final List<Class<? extends Throwable>> NON_PEELABLE_EXCEPTIONS =
-            Arrays.asList(Error.class, MemberLeftException.class);
+            List.of(Error.class, MemberLeftException.class);
 
     protected AsyncSocket asyncSocket;
     protected IOBufferAllocator responseBufAllocator;
@@ -69,24 +71,50 @@ public abstract class AbstractMessageTask<P> implements MessageTask, SecureReque
     protected final ClientMessage clientMessage;
     protected final ServerConnection connection;
     protected final ClientEndpoint endpoint;
-    protected final NodeEngineImpl nodeEngine;
+    protected final NodeEngine nodeEngine;
     protected final InternalSerializationService serializationService;
     protected final ILogger logger;
     protected final ClientEngine clientEngine;
     protected P parameters;
+
     private final ClientEndpointManager endpointManager;
-    private final Node node;
+    private final NodeExtension nodeExtension;
+    private final BuildInfo buildInfo;
+    private final Config config;
+    private final ClusterServiceImpl clusterService;
 
     protected AbstractMessageTask(ClientMessage clientMessage, Node node, Connection connection) {
         this.clientMessage = clientMessage;
+        // Can't centralise the constructors because getClass() is dynamic
         this.logger = node.getLogger(getClass());
-        this.node = node;
         this.nodeEngine = node.getNodeEngine();
         this.serializationService = node.getSerializationService();
         this.connection = (ServerConnection) connection;
         this.clientEngine = node.getClientEngine();
         this.endpointManager = clientEngine.getEndpointManager();
         this.endpoint = initEndpoint();
+        this.nodeExtension = node.getNodeExtension();
+        this.buildInfo = node.getBuildInfo();
+        this.config = node.getConfig();
+        this.clusterService = node.getClusterService();
+    }
+
+    // Primarily for testing, where `Node` cannot be mocked
+    protected AbstractMessageTask(ClientMessage clientMessage, ILogger logger, NodeEngine nodeEngine,
+            InternalSerializationService serializationService, ClientEngine clientEngine, Connection connection,
+            NodeExtension nodeExtension, BuildInfo buildInfo, Config config, ClusterServiceImpl clusterService) {
+        this.clientMessage = clientMessage;
+        this.logger = logger;
+        this.nodeEngine = nodeEngine;
+        this.serializationService = serializationService;
+        this.clientEngine = clientEngine;
+        this.connection = (ServerConnection) connection;
+        this.endpointManager = clientEngine.getEndpointManager();
+        this.endpoint = initEndpoint();
+        this.nodeExtension = nodeExtension;
+        this.buildInfo = buildInfo;
+        this.config = config;
+        this.clusterService = clusterService;
     }
 
     public void setAsyncSocket(AsyncSocket asyncSocket) {
@@ -99,7 +127,7 @@ public abstract class AbstractMessageTask<P> implements MessageTask, SecureReque
 
     @SuppressWarnings("unchecked")
     public <S> S getService(String serviceName) {
-        return (S) node.getNodeEngine().getService(serviceName);
+        return (S) nodeEngine.getService(serviceName);
     }
 
     private ClientEndpoint initEndpoint() {
@@ -174,7 +202,7 @@ public abstract class AbstractMessageTask<P> implements MessageTask, SecureReque
     protected final void validateNodeStart() {
         boolean acceptOnIncompleteStart = acceptOnIncompleteStart()
                 && ConnectionType.MC_JAVA_CLIENT.equals(endpoint.getClientType());
-        if (!acceptOnIncompleteStart && !node.getNodeExtension().isStartCompleted()) {
+        if (!acceptOnIncompleteStart && !nodeExtension.isStartCompleted()) {
             throw new HazelcastInstanceNotActiveException("Hazelcast instance is not ready yet!");
         }
     }
@@ -316,11 +344,11 @@ public abstract class AbstractMessageTask<P> implements MessageTask, SecureReque
     }
 
     protected final BuildInfo getMemberBuildInfo() {
-        return node.getBuildInfo();
+        return buildInfo;
     }
 
     protected boolean isAdvancedNetworkEnabled() {
-        return node.getConfig().getAdvancedNetworkConfig().isEnabled();
+        return config.getAdvancedNetworkConfig().isEnabled();
     }
 
     final boolean addressesDecodedWithTranslation() {
@@ -332,7 +360,7 @@ public abstract class AbstractMessageTask<P> implements MessageTask, SecureReque
         }
         Class<Address> addressClass = Address.class;
         Field[] fields = parameters.getClass().getDeclaredFields();
-        Set<Address> addresses = new HashSet<Address>();
+        Set<Address> addresses = new HashSet<>();
         try {
             for (Field field : fields) {
                 if (addressClass.isAssignableFrom(field.getType())) {
@@ -343,7 +371,7 @@ public abstract class AbstractMessageTask<P> implements MessageTask, SecureReque
             logger.info("Could not reflectively access parameter fields", e);
         }
         if (!addresses.isEmpty()) {
-            Collection<Address> allMemberAddresses = node.clusterService.getMemberAddresses();
+            Collection<Address> allMemberAddresses = clusterService.getMemberAddresses();
             for (Address address : addresses) {
                 if (!allMemberAddresses.contains(address)) {
                     return false;
